SteveHorses OLD/Steve PRO OLD/logs/run_20250831_201928.log
  File "/Users/stephenjerome/Desktop/SteveHorsesPro/steve_horses_pro.py", line 124
    parts.append("<div class='sub'>Tracks: "+", ".join(TRACKS)+". Data via The Racing API. " + " ".join(f\"<span class='badge'>{html.escape(b)}</span>\" for b in badges) + "</div>")
                                                                                                                                                                                    ^
SyntaxError: unexpected character after line continuation character
